@@ -70,6 +70,9 @@ ToDo/Notes:
 	  mft record dirty as well as the page itself.
 	- Fix compiler warnings on x86-64 in fs/ntfs/dir.c.  (Randy Dunlap,
 	  slightly modified by me)
+	- Add fs/ntfs/mft.c::try_map_mft_record() which fails with -EALREADY if
+	  the mft record is already locked and otherwise behaves the same way
+	  as fs/ntfs/mft.c::map_mft_record().
 
 2.1.20 - Fix two stupid bugs introduced in 2.1.18 release.
 
